# mcps

jenkins_mcp/: .env.example  .gitignore  README.md  pyproject.toml  run_server.py
jenkins_mcp/config/: allowed_jobs.example.yml
jenkins_mcp/src/jenkins_release_mcp/: __init__.py  config.py  jenkins_client.py  models.py  notifier.py  server.py  storage.py
jenkins_mcp/tests/: test_config.py  test_jenkins_client.py  test_server.py
logs_mcp/: .gitignore  Dockerfile  README.md  agent_run.py  agent_run_python3.6.py  center_run.py  center_run_python3.7.py  docker-compose.yml  mcp_client_demo.py  pyproject.toml  requirements_center_python3.7.txt  run.py
logs_mcp/agent/: config.example.yaml
logs_mcp/agent/log_agent/: __init__.py  client.py  config.py  models.py  reader.py  worker.py
logs_mcp/agent_python3.6/log_agent_compat/: __init__.py  client.py  config.py  reader.py  worker.py
logs_mcp/center/: config.example.yaml
logs_mcp/center/log_center/: __init__.py  app.py  config.py  models.py  server.py  store.py
logs_mcp/center_python3.7/log_center_compat/: __init__.py  app.py  config.py  server.py  store.py
logs_mcp/mcp/: config.compose.yaml  config.example.yaml
logs_mcp/mcp/log_mcp/: __init__.py  auth.py  client.py  config.py  downloads.py  models.py  server.py  tools.py
logs_mcp/tests/: test_agent.py  test_agent_compat.py  test_center.py  test_center_compat.py  test_client.py  test_config.py  test_downloads.py  test_mcp_auth.py  test_tools.py
prometheus_mcp/: .env.example  .gitignore  README.md  pyproject.toml  run.py
prometheus_mcp/src/prometheus_mcp/: __init__.py  client.py  diagnostics.py  knowledge.py  server.py  templates.py
prometheus_mcp/tests/: test_client.py  test_diagnostics.py  test_server.py
