[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "jenkins-release-mcp"
version = "0.1.0"
description = "A Python MCP server for safely triggering and monitoring Jenkins releases."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Jenkins Release MCP Maintainers" }
]
dependencies = [
  "httpx>=0.27,<1.0",
  "mcp[cli]>=1.0,<2.0",
  "pydantic>=2.7,<3.0",
  "python-dotenv>=1.0,<2.0",
  "PyYAML>=6.0,<7.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9.0",
  "respx>=0.21,<1.0"
]

[project.scripts]
jenkins-release-mcp = "jenkins_release_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
